テスト追加：OAuth開始、パスワードリセット、登録API の統合テスト
OAuth start API の統合テストを実装し、リダイレクトとエラー処理を検証する。
パスワードリセット API の統合テストを追加し、リクエスト（要求）／確認（確認トークン）フローの成功ケースとエラーケースを網羅する。
登録（registration）API の統合テストを作成し、ユーザー登録（サインアップ）機能が期待通りに動作することを確認する。
CSRF ミドルウェアの統合テストを導入し、CSRF トークンの取り扱い（発行・検証・拒否動作）を検証する。
register サービスの単体テストを追加し、セッションの永続化とクッキー管理が正しく行われることを確認する。

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
     "validate-docs": "node scripts/validate-design-docs.js",
     "check-coverage": "node scripts/generate-coverage-report.js",
     "cleanup:audit-logs": "node scripts/cleanup-audit-logs.js"
@@ -35,6 +39,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@mermaid-js/mermaid-cli": "^11.12.0",
+    "@playwright/test": "^1.58.2",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
